--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,22 @@ jobs:
         rows: [10, 100, 1000]
         cols: [10, 100, 1000]
         threads: [1, 2, 5]
+        # Excluimos combinaciones que generan demasiadas hebras
+        exclude:
+        - rows: 100
+          cols: 1000
+          threads: 2
+        - rows: 100
+          cols: 1000
+          threads: 5
+        - rows: 1000
+          cols: 100
+          threads: 2
+        - rows: 1000
+          cols: 100
+          threads: 5
+        - rows: 1000
+          cols: 1000
     steps:
       - uses: actions/checkout@v4
       - name: Build
